# tutorbot

./: Dockerfile  LICENSE  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: DeployBackendApp.yml  deploy.yml
app/: bot.py
app/callbacks/: enter_data.py
app/config/: config.py
app/config/db/: engine.py
app/locales/: messages.pot
app/locales/en/LC_MESSAGES/: messages.mo  messages.po
app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
app/locales/uk/LC_MESSAGES/: messages.mo  messages.po
app/models/: booking.py  complaint.py  timeslot.py  user.py
app/models/profiles/: student.py  teacher.py
app/models/student/: student.py
app/models/teacher/: lesson.py  teacher.py
app/ui/: start.py  user_router.py
app/ui/keyboard/: qualification.py  role.py  search_teacher.py
app/ui/keyboard/data/: enter_student.py
app/utils/callbacks/: role.py
app/utils/fsm/: teacher_states.py  user_states.py
migration/: env.py
migrations/: env.py
migrations/versions/: d7b5be068f3a_initial_migration.py
ocr/: text_reg.py
