[project]
name = "tgbot"
version = "0.1.0"
description = ""
authors = [
    {name = "solonko-anton",email = "asolonko42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram[i18n] (>=3.20.0.post0,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "ruff (>=0.12.0,<0.13.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false